# PreglRenderer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
assets/meshes/: cube.rmesh  line.rmesh  quad.rmesh  triangle.rmesh
assets/models/blendershapes/: Maya_Cube.fbx  blender_cone.fbx  blender_torus.mtl  cone_test_maya.dae  cone_y(up).fbx
assets/shaders/: TextureToScreen.frag  TextureToScreen.vert  shadowDepth.frag  test.frag  test.vert
assets/shaders/debug/: batchLines.frag  batchLines.vert
assets/shaders/lighting/: ModelLighting.frag  ModelLighting.vert  PreviewMaterial.frag  PreviewMaterial.vert  TestMultiRender.frag
assets/shaders/shadowMapping/: ShadowDepth.vert
assets/shaders/worldGrid/: worldGrid.frag  worldGrid.geo  worldGrid.vert
libs/assimp/lib/: assimp-vc143-mtd.exp  assimp-vc143-mtd.lib
libs/imgui/: imgui.cpp
pregl/Core/: AppWindow.cpp  AppWindow.h  Application.cpp  Application.h  DisplayManager.cpp  DisplayManager.h  EditorCamera.cpp  EditorCamera.h  GraphicsProgramInterface.h  HeapMemAllocationTracking.cpp  HeapMemAllocationTracking.h  InputSystem.cpp  InputSystem.h  Log.h  NonCopyable.h  Profiler.h  Profilers.h  ShaderHotReloadTracker.cpp  ShaderHotReloadTracker.h  UI_Window_Panel_Editors.cpp  UI_Window_Panel_Editors.h  Util.h
pregl/Loader/: Loader.h  ModelLoader.cpp  ModelLoader.h
pregl/Renderer/: DebugGizmosRenderer.cpp  DebugGizmosRenderer.h  ErrorAssertion.cpp  GLErrorAssertion.cpp  GLErrorAssertion.h  GPUResources.cpp  GPUResources.h  GPUVertexData.cpp  GPUVertexData.h  Lighting.cpp  Lighting.h  Material.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
samples/: EntryPoint.cpp  SampleGfxProgram.cpp  SampleGfxProgram.h  SampleLightScene.cpp  SampleLightScene.h
src/SampleFramework/: Camera.cpp  Camera.h
src/SampleFramework/Application/: Application.cpp  Application.h  EntryPoint.cpp
src/SampleFramework/Input/: InputSystem.h
src/SampleFramework/Renderer/: DebugGizmosRenderer.cpp  DebugGizmosRenderer.h  GPUVertexData.h  GraphicsProgramInterface.h  Renderer.cpp  Renderer.h  SampleGfxProgram.cpp  SampleGfxProgram.h  Texture.cpp  std_image.cpp
src/SampleFramework/Utils/: Loader.h  ModelLoader.cpp  ModelLoader.h
